# xenonauts-soldier-editor

./: Cargo.toml
src/: assets.rs  main.rs  save.rs  soldier.rs  view.rs
src/soldier/: mod.rs
test/: single_solider.sav
tests/: full_save.sav  random_data.sav
