[package]
name = "xenonauts-soldier-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.25.0"
hex-literal = "0.4.1"
iced = { version = "0.12.1", features = ["image"] }
iced_aw = { version = "0.9.3", default-features = false, features = ["drop_down", "icons", "number_input"] }
itertools = "0.13.0"
nom = "7.1.3"
rayon = "1.10.0"
regex = "1.10.5"
rfd = "0.14.1"
roxmltree = "0.20.0"
rust_search = "2.1.0"
